# actix-postgres-example

./: .env  Cargo.toml  README.md  config.toml  docker-compose-dev.yml  fleet.toml  setup.sh
migrations/2023-04-14-074654_users/: down.sql  up.sql
migrations/2023-04-23-110928_files/: up.sql
src/: config.rs  errors.rs  main.rs  models.rs  schema.rs  usage.rs
src/api/: errors.rs  files.rs  mod.rs  statistics.rs  users.rs
src/api/routes/: users.rs
src/database/: db.rs  files.rs  mod.rs  statistics.rs  users.rs
