[package]
name = "actix-postgres-example"
version = "0.1.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
uuid = { version = ">=0.7.0, <2.0.0", features = ["serde", "v4"] }
diesel = { version = "2.0.0", features = ["postgres", "postgres_backend", "r2d2", "uuid"] }
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
derive_more = "0.99.17"
thiserror = "1.0"
rust-argon2 = "1.0.0"
rand = "0.8.5"
quinn = "0.9.3"
actix-identity = "0.5.2"
serde_json = "1.0.96"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
